tests/run/error_ptr_leak_branch.out
tests/run/error_ptr_leak_branch.em:9:5: error: 'f' is a 'Ptr' opened but not closed on this path
tests/run/error_ptr_leak_branch.em:9:5: help: a 'Ptr' is a linear FFI handle with no destructor — close it on every path (e.g. fclose(it)) or return it to transfer ownership to the caller
tests/run/error_ptr_leak_branch.em:8:5: note: opened here
